Use padding instead of margin to prevent overflow

--- a/app/assets/stylesheets/avalon.css.scss
+++ b/app/assets/stylesheets/avalon.css.scss
@@ -404,7 +404,7 @@ div[id*='facet-panel-'] {
 /* Footer */
 
 footer {
-  .container { margin: 0 3em 0 3em; }
+  .container { padding: 0 3em 0 3em; }
   margin-top: 3em;
   background-color: #333;
   color: white;
